# 631-Project

./: 2  CMakeLists.txt  LineClipY.pgm  README.md  assign5todo.md  clean.ps1  debug.ps1  notes.txt  run.ps1
rdviews/: curves.rd  light_test.rd  s20.rd~  s24.rd  s26.rd~  s39.rd  s41.rd  s42.rd  s43.rd  s46.rd
source/: core.h  main.cpp  window.cpp  window.h
source/core/: definitions.h  linear.cpp  linear.h  primitives.h
source/rdview/: operations.cpp  operations.h  parser.cpp  parser.h  statement.h
source/renderer/: device.cpp  device.h  renderer.cpp  renderer.h
source/window/: window_handler.cpp  window_handler.h
